Fix gateway issuer-uri + routes + security

--- a/api_gateway/src/main/resources/application.properties
+++ b/api_gateway/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.cloud.gateway.routes[0].uri=http://localhost:8082
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/products/**
 spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8088/realms/inventory-realm
+
 
 spring.cloud.gateway.routes[1].id=inventory-service
 spring.cloud.gateway.routes[1].uri=http://localhost:8083
@@ -19,5 +21,5 @@ spring.cloud.gateway.routes[2].filters[0]=StripPrefix=1
 
 spring.cloud.gateway.routes[3].id=notification-service
 spring.cloud.gateway.routes[3].uri= http://localhost:8085
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/orders/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/notifications/**
 spring.cloud.gateway.routes[3].filters[0]=StripPrefix=1
