--- a/order_service/src/main/resources/application.properties
+++ b/order_service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-jwt.secret=QlOIEteOz++UGFwkmB5c0EDoyevN5cDSV+pf07SiNYs=
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8088/realms/inventory-realm
 
 
 spring.jpa.hibernate.ddl-auto=update
