--- a/notification_service/src/main/resources/application.properties
+++ b/notification_service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port = 8085
 spring.application.name=notification_microservice
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8088/realms/inventory-realm
+
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
